--- a/main.tex
+++ b/main.tex
@@ -43,11 +43,11 @@
 \department{\href{https://apps.ucu.edu.ua/en/}{Department of Computer Sciences}}
 \faculty{\href{https://apps.ucu.edu.ua/en/}{Faculty of Applied Sciences}} 
 
-\AtBeginDocument{
-\hypersetup{pdftitle=\ttitle} % Set the PDF's title to your title
-\hypersetup{pdfauthor=\authorname} % Set the PDF's author to your name
-\hypersetup{pdfkeywords=\keywordnames} % Set the PDF's keywords to your keywords
-}
+% \AtBeginDocument{
+% \hypersetup{pdftitle=\ttitle} % Set the PDF's title to your title
+% \hypersetup{pdfauthor=\authorname} % Set the PDF's author to your name
+% \hypersetup{pdfkeywords=\keywordnames} % Set the PDF's keywords to your keywords
+% }
 
 \begin{document}
 
