--- a/refs.bib
+++ b/refs.bib
@@ -1,4 +1,282 @@
 
+@article{yang_pixor_2019,
+	title = {{PIXOR}: {Real}-time {3D} {Object} {Detection} from {Point} {Clouds}},
+	shorttitle = {{PIXOR}},
+	url = {http://arxiv.org/abs/1902.06326},
+	abstract = {We address the problem of real-time 3D object detection from point clouds in the context of autonomous driving. Computation speed is critical as detection is a necessary component for safety. Existing approaches are, however, expensive in computation due to high dimensionality of point clouds. We utilize the 3D data more efficiently by representing the scene from the Bird's Eye View (BEV), and propose PIXOR, a proposal-free, single-stage detector that outputs oriented 3D object estimates decoded from pixel-wise neural network predictions. The input representation, network architecture, and model optimization are especially designed to balance high accuracy and real-time efficiency. We validate PIXOR on two datasets: the KITTI BEV object detection benchmark, and a large-scale 3D vehicle detection benchmark. In both datasets we show that the proposed detector surpasses other state-of-the-art methods notably in terms of Average Precision (AP), while still runs at {\textgreater}28 FPS.},
+	urldate = {2021-05-24},
+	journal = {arXiv:1902.06326 [cs]},
+	author = {Yang, Bin and Luo, Wenjie and Urtasun, Raquel},
+	month = mar,
+	year = {2019},
+	note = {arXiv: 1902.06326},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition},
+}
+
+@article{shi_points_2020,
+	title = {From {Points} to {Parts}: {3D} {Object} {Detection} from {Point} {Cloud} with {Part}-aware and {Part}-aggregation {Network}},
+	shorttitle = {From {Points} to {Parts}},
+	url = {http://arxiv.org/abs/1907.03670},
+	abstract = {3D object detection from LiDAR point cloud is a challenging problem in 3D scene understanding and has many practical applications. In this paper, we extend our preliminary work PointRCNN to a novel and strong point-cloud-based 3D object detection framework, the part-aware and aggregation neural network (Part-\$A{\textasciicircum}2\$ net). The whole framework consists of the part-aware stage and the part-aggregation stage. Firstly, the part-aware stage for the first time fully utilizes free-of-charge part supervisions derived from 3D ground-truth boxes to simultaneously predict high quality 3D proposals and accurate intra-object part locations. The predicted intra-object part locations within the same proposal are grouped by our new-designed RoI-aware point cloud pooling module, which results in an effective representation to encode the geometry-specific features of each 3D proposal. Then the part-aggregation stage learns to re-score the box and refine the box location by exploring the spatial relationship of the pooled intra-object part locations. Extensive experiments are conducted to demonstrate the performance improvements from each component of our proposed framework. Our Part-\$A{\textasciicircum}2\$ net outperforms all existing 3D detection methods and achieves new state-of-the-art on KITTI 3D object detection dataset by utilizing only the LiDAR point cloud data. Code is available at https://github.com/sshaoshuai/PointCloudDet3D.},
+	urldate = {2021-05-24},
+	journal = {arXiv:1907.03670 [cs]},
+	author = {Shi, Shaoshuai and Wang, Zhe and Shi, Jianping and Wang, Xiaogang and Li, Hongsheng},
+	month = mar,
+	year = {2020},
+	note = {arXiv: 1907.03670},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition},
+}
+
+@misc{noauthor_optimizing_nodate,
+	title = {Optimizing {Multiple} {Loss} {Functions} with {Loss}-{Conditional} {Training}},
+	url = {http://ai.googleblog.com/2020/04/optimizing-multiple-loss-functions-with.html},
+	abstract = {Posted by Alexey Dosovitskiy, Research Scientist, Google Research     In many machine learning applications the performance of a model canno...},
+	language = {en},
+	urldate = {2021-05-24},
+	journal = {Google AI Blog},
+}
+
+@inproceedings{shotton_real-time_2011,
+	title = {Real-{Time} {Human} {Pose} {Recognition} in {Parts} from {Single} {Depth} {Images}},
+	volume = {56},
+	isbn = {978-3-642-28660-5},
+	doi = {10.1109/CVPR.2011.5995316},
+	abstract = {We propose a new method to quickly and accurately predict human pose---the 3D positions of body joints---from a single depth image, without depending on information from preceding frames. Our approach is strongly rooted in current object recognition strategies. By designing an intermediate representation in terms of body parts, the difficult pose estimation problem is transformed into a simpler per-pixel classification problem, for which efficient machine learning techniques exist. By using computer graphics to synthesize a very large dataset of training image pairs, one can train a classifier that estimates body part labels from test images invariant to pose, body shape, clothing, and other irrelevances. Finally, we generate confidence-scored 3D proposals of several body joints by reprojecting the classification result and finding local modes.
+The system runs in under 5ms on the Xbox 360. Our evaluation shows high accuracy on both synthetic and real test sets, and investigates the effect of several training parameters. We achieve state-of-the-art accuracy in our comparison with related work and demonstrate improved generalization over exact whole-skeleton nearest neighbor matching.},
+	author = {Shotton, Jamie and Fitzgibbon, Andrew and Cook, Mat and Sharp, Toby and Finocchio, Mark and Moore, Richard and Kipman, Alex and Blake, Andrew},
+	month = jun,
+	year = {2011},
+	pages = {1297--1304},
+}
+
+@article{gritsevskiy_capsule_2018,
+	title = {Capsule networks for low-data transfer learning},
+	url = {http://arxiv.org/abs/1804.10172},
+	abstract = {We propose a capsule network-based architecture for generalizing learning to new data with few examples. Using both generative and non-generative capsule networks with intermediate routing, we are able to generalize to new information over 25 times faster than a similar convolutional neural network. We train the networks on the multiMNIST dataset lacking one digit. After the networks reach their maximum accuracy, we inject 1-100 examples of the missing digit into the training set, and measure the number of batches needed to return to a comparable level of accuracy. We then discuss the improvement in low-data transfer learning that capsule networks bring, and propose future directions for capsule research.},
+	urldate = {2021-05-23},
+	journal = {arXiv:1804.10172 [cs]},
+	author = {Gritsevskiy, Andrew and Korablyov, Maksym},
+	month = apr,
+	year = {2018},
+	note = {arXiv: 1804.10172},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition},
+}
+
+@article{gritsevskiy_capsule_nodate,
+	title = {Capsule networks for low-data transfer learning},
+	abstract = {We propose a capsule network-based architecture for generalizing learning to new data with few examples. Using both generative and non-generative capsule networks with intermediate routing, we are able to generalize to new information over 25 times faster than a similar convolutional neural network. We train the networks on the multiMNIST dataset lacking one digit. After the networks reach their maximum accuracy, we inject 1-100 examples of the missing digit into the training set, and measure the number of batches needed to return to a comparable level of accuracy. We then discuss the improvement in low-data transfer learning that capsule networks bring, and propose future directions for capsule research.},
+	language = {en},
+	author = {Gritsevskiy, Andrew},
+	pages = {12},
+}
+
+@article{wang_capsule_2020,
+	title = {Capsule {Networks} {Showed} {Excellent} {Performance} in the {Classification} of {hERG} {Blockers}/{Nonblockers}},
+	volume = {10},
+	issn = {1663-9812},
+	url = {https://www.frontiersin.org/articles/10.3389/fphar.2019.01631/full},
+	doi = {10.3389/fphar.2019.01631},
+	abstract = {Capsule networks (CapsNets), a new class of deep neural network architectures proposed recently by Hinton et al, have shown a great performance in many fields, particularly in image recognition and natural language processing. However, CapsNets have not yet been applied to drug discovery-related studies. As the first attempt, we in this investigation adopted CapsNets to develop classification models of hERG blockers/nonblockers; drugs with hERG blockade activity are thought to have a potential risk of cardiotoxicity. Two capsule network architectures were established: Conv-CapsNet and RBM-CapsNet, in which convolution and a restricted Boltzmann machine (RBM) were used as feature extractors, respectively. Two prediction models of hERG blockers/nonblockers were then developed by Conv-CapsNet and RBM-CapsNet with the Doddareddy’s training set composed of 2,389 compounds. The established models showed excellent performance in an independent test set comprising 255 compounds, with prediction accuracies of 91.8 \% and 92.2 \% for Conv-CapsNet and RBM-CapsNet models, respectively. Various comparisons were also made between our models and those developed by other deep learning methods including CNN, DBN, MLP, and LSTM, and with different training sets. All the results showed that the models by Conv-CapsNet and RBM-CapsNet are among the best classification models. Overall, the excellent performance of capsule networks achieved in this investigation highlights their potential in drug discovery-related studies.},
+	language = {English},
+	urldate = {2021-05-23},
+	journal = {Frontiers in Pharmacology},
+	author = {Wang, Yiwei and Huang, Lei and Jiang, Siwen and Wang, Yifei and Zou, Jun and Fu, Hongguang and Yang, Shengyong},
+	year = {2020},
+	note = {Publisher: Frontiers},
+	keywords = {Capsule network, Classification model, Conv-CapsNet, RBM-CapsNet, deep learning, hERG},
+}
+
+@article{rakotosaona_pointcleannet_2020,
+	title = {{PointCleanNet}: {Learning} to {Denoise} and {Remove} {Outliers} from {Dense} {Point} {Clouds}},
+	volume = {39},
+	copyright = {© 2019 The Authors Computer Graphics Forum © 2019 Eurographics - The European Association for Computer Graphics and John Wiley \& Sons Ltd},
+	issn = {1467-8659},
+	shorttitle = {{PointCleanNet}},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/cgf.13753},
+	doi = {https://doi.org/10.1111/cgf.13753},
+	abstract = {Point clouds obtained with 3D scanners or by image-based reconstruction techniques are often corrupted with significant amount of noise and outliers. Traditional methods for point cloud denoising largely rely on local surface fitting (e.g. jets or MLS surfaces), local or non-local averaging or on statistical assumptions about the underlying noise model. In contrast, we develop a simple data-driven method for removing outliers and reducing noise in unordered point clouds. We base our approach on a deep learning architecture adapted from PCPNet, which was recently proposed for estimating local 3D shape properties in point clouds. Our method first classifies and discards outlier samples, and then estimates correction vectors that project noisy points onto the original clean surfaces. The approach is efficient and robust to varying amounts of noise and outliers, while being able to handle large densely sampled point clouds. In our extensive evaluation, both on synthetic and real data, we show an increased robustness to strong noise levels compared to various state-of-the-art methods, enabling accurate surface reconstruction from extremely noisy real data obtained by range scans. Finally, the simplicity and universality of our approach makes it very easy to integrate in any existing geometry processing pipeline. Both the code and pre-trained networks can be found on the project page (https://github.com/mrakotosaon/pointcleannet).},
+	language = {en},
+	number = {1},
+	urldate = {2021-05-23},
+	journal = {Computer Graphics Forum},
+	author = {Rakotosaona, Marie-Julie and Barbera, Vittorio La and Guerrero, Paul and Mitra, Niloy J. and Ovsjanikov, Maks},
+	year = {2020},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/cgf.13753},
+	keywords = {Computing Methodologies: Point-based models, Neural networks, Shape analysis, methods and applications, modeling, point-based graphics, point-based methods, signal processing},
+	pages = {185--203},
+}
+
+@inproceedings{lv_point_2020,
+	title = {Point {Cloud} {Denoising} {Algorithm} {Based} on {Noise} {Classification}},
+	doi = {10.1109/ICCST50977.2020.00029},
+	abstract = {Aiming at the problem of different kinds of noise in 3D point cloud data, we propose a point cloud denoising method based on noise classification. This algorithm first divides noise in point cloud data into inner points and outer points, and uses radius filtering and statistical filtering to remove the outer points. Then, normal and curvature information of point cloud are estimated by the principal component analysis. At the same time, curvature information is introduced into the bilateral filtering factor to improve the existing algorithm. Ultimately, we smooth inner points mixed in point cloud by utilizing the modified algorithm. Comparing the improved algorithm with the bilateral filtering algorithm on the bunny, horse and dragon model, experimental results indicate that the maximum error and the average error are reduced. The algorithm in this paper makes models' features maintained better while models are smoothed.},
+	booktitle = {2020 {International} {Conference} on {Culture}-oriented {Science} {Technology} ({ICCST})},
+	author = {Lv, Chaohui and Li, Min},
+	month = oct,
+	year = {2020},
+	keywords = {Classification algorithms, Filtering, Filtering algorithms, Noise reduction, Smoothing methods, Solid modeling, Three-dimensional displays, bilateral filtering, noise classification, radius filtering, statistical filtering},
+	pages = {123--127},
+}
+
+@article{hermosilla_total_2019,
+	title = {Total {Denoising}: {Unsupervised} {Learning} of {3D} {Point} {Cloud} {Cleaning}},
+	shorttitle = {Total {Denoising}},
+	url = {http://arxiv.org/abs/1904.07615},
+	abstract = {We show that denoising of 3D point clouds can be learned unsupervised, directly from noisy 3D point cloud data only. This is achieved by extending recent ideas from learning of unsupervised image denoisers to unstructured 3D point clouds. Unsupervised image denoisers operate under the assumption that a noisy pixel observation is a random realization of a distribution around a clean pixel value, which allows appropriate learning on this distribution to eventually converge to the correct value. Regrettably, this assumption is not valid for unstructured points: 3D point clouds are subject to total noise, i. e., deviations in all coordinates, with no reliable pixel grid. Thus, an observation can be the realization of an entire manifold of clean 3D points, which makes a na{\textbackslash}"ive extension of unsupervised image denoisers to 3D point clouds impractical. Overcoming this, we introduce a spatial prior term, that steers converges to the unique closest out of the many possible modes on a manifold. Our results demonstrate unsupervised denoising performance similar to that of supervised learning with clean data when given enough training examples - whereby we do not need any pairs of noisy and clean training data.},
+	urldate = {2021-05-23},
+	journal = {arXiv:1904.07615 [cs]},
+	author = {Hermosilla, Pedro and Ritschel, Tobias and Ropinski, Timo},
+	month = oct,
+	year = {2019},
+	note = {arXiv: 1904.07615},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition, Computer Science - Graphics},
+}
+
+@article{kingma_adam_2017,
+	title = {Adam: {A} {Method} for {Stochastic} {Optimization}},
+	shorttitle = {Adam},
+	url = {http://arxiv.org/abs/1412.6980},
+	abstract = {We introduce Adam, an algorithm for first-order gradient-based optimization of stochastic objective functions, based on adaptive estimates of lower-order moments. The method is straightforward to implement, is computationally efficient, has little memory requirements, is invariant to diagonal rescaling of the gradients, and is well suited for problems that are large in terms of data and/or parameters. The method is also appropriate for non-stationary objectives and problems with very noisy and/or sparse gradients. The hyper-parameters have intuitive interpretations and typically require little tuning. Some connections to related algorithms, on which Adam was inspired, are discussed. We also analyze the theoretical convergence properties of the algorithm and provide a regret bound on the convergence rate that is comparable to the best known results under the online convex optimization framework. Empirical results demonstrate that Adam works well in practice and compares favorably to other stochastic optimization methods. Finally, we discuss AdaMax, a variant of Adam based on the infinity norm.},
+	urldate = {2021-05-23},
+	journal = {arXiv:1412.6980 [cs]},
+	author = {Kingma, Diederik P. and Ba, Jimmy},
+	month = jan,
+	year = {2017},
+	note = {arXiv: 1412.6980},
+	keywords = {Computer Science - Machine Learning},
+}
+
+@misc{noauthor_strawlabpython-pcl_2021,
+	title = {strawlab/python-pcl},
+	copyright = {View license         ,                      View license},
+	url = {https://github.com/strawlab/python-pcl},
+	abstract = {Python bindings to the pointcloud library (pcl). Contribute to strawlab/python-pcl development by creating an account on GitHub.},
+	urldate = {2021-05-23},
+	publisher = {Straw Lab},
+	month = may,
+	year = {2021},
+	note = {original-date: 2012-05-16T10:26:35Z},
+}
+
+@article{chen_pose_2020,
+	title = {Pose {Guided} {Structured} {Region} {Ensemble} {Network} for {Cascaded} {Hand} {Pose} {Estimation}},
+	volume = {395},
+	issn = {09252312},
+	url = {http://arxiv.org/abs/1708.03416},
+	doi = {10.1016/j.neucom.2018.06.097},
+	abstract = {Hand pose estimation from a single depth image is an essential topic in computer vision and human computer interaction. Despite recent advancements in this area promoted by convolutional neural network, accurate hand pose estimation is still a challenging problem. In this paper we propose a Pose guided structured Region Ensemble Network (Pose-REN) to boost the performance of hand pose estimation. The proposed method extracts regions from the feature maps of convolutional neural network under the guide of an initially estimated pose, generating more optimal and representative features for hand pose estimation. The extracted feature regions are then integrated hierarchically according to the topology of hand joints by employing tree-structured fully connections. A refined estimation of hand pose is directly regressed by the proposed network and the final hand pose is obtained by utilizing an iterative cascaded method. Comprehensive experiments on public hand pose datasets demonstrate that our proposed method outperforms state-of-the-art algorithms.},
+	urldate = {2021-05-23},
+	journal = {Neurocomputing},
+	author = {Chen, Xinghao and Wang, Guijin and Guo, Hengkai and Zhang, Cairong},
+	month = jun,
+	year = {2020},
+	note = {arXiv: 1708.03416},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition},
+	pages = {138--149},
+}
+
+@article{moon_v2v-posenet_2018,
+	title = {{V2V}-{PoseNet}: {Voxel}-to-{Voxel} {Prediction} {Network} for {Accurate} {3D} {Hand} and {Human} {Pose} {Estimation} from a {Single} {Depth} {Map}},
+	shorttitle = {{V2V}-{PoseNet}},
+	url = {http://arxiv.org/abs/1711.07399},
+	abstract = {Most of the existing deep learning-based methods for 3D hand and human pose estimation from a single depth map are based on a common framework that takes a 2D depth map and directly regresses the 3D coordinates of keypoints, such as hand or human body joints, via 2D convolutional neural networks (CNNs). The first weakness of this approach is the presence of perspective distortion in the 2D depth map. While the depth map is intrinsically 3D data, many previous methods treat depth maps as 2D images that can distort the shape of the actual object through projection from 3D to 2D space. This compels the network to perform perspective distortion-invariant estimation. The second weakness of the conventional approach is that directly regressing 3D coordinates from a 2D image is a highly non-linear mapping, which causes difficulty in the learning procedure. To overcome these weaknesses, we firstly cast the 3D hand and human pose estimation problem from a single depth map into a voxel-to-voxel prediction that uses a 3D voxelized grid and estimates the per-voxel likelihood for each keypoint. We design our model as a 3D CNN that provides accurate estimates while running in real-time. Our system outperforms previous methods in almost all publicly available 3D hand and human pose estimation datasets and placed first in the HANDS 2017 frame-based 3D hand pose estimation challenge. The code is available in https://github.com/mks0601/V2V-PoseNet\_RELEASE.},
+	urldate = {2021-05-23},
+	journal = {arXiv:1711.07399 [cs]},
+	author = {Moon, Gyeongsik and Chang, Ju Yong and Lee, Kyoung Mu},
+	month = aug,
+	year = {2018},
+	note = {arXiv: 1711.07399
+version: 3},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition},
+}
+
+@article{haque_towards_2016,
+	title = {Towards {Viewpoint} {Invariant} {3D} {Human} {Pose} {Estimation}},
+	url = {http://arxiv.org/abs/1603.07076},
+	abstract = {We propose a viewpoint invariant model for 3D human pose estimation from a single depth image. To achieve this, our discriminative model embeds local regions into a learned viewpoint invariant feature space. Formulated as a multi-task learning problem, our model is able to selectively predict partial poses in the presence of noise and occlusion. Our approach leverages a convolutional and recurrent network architecture with a top-down error feedback mechanism to self-correct previous pose estimates in an end-to-end manner. We evaluate our model on a previously published depth dataset and a newly collected human pose dataset containing 100K annotated depth images from extreme viewpoints. Experiments show that our model achieves competitive performance on frontal views while achieving state-of-the-art performance on alternate viewpoints.},
+	urldate = {2021-05-23},
+	journal = {arXiv:1603.07076 [cs]},
+	author = {Haque, Albert and Peng, Boya and Luo, Zelun and Alahi, Alexandre and Yeung, Serena and Fei-Fei, Li},
+	month = jul,
+	year = {2016},
+	note = {arXiv: 1603.07076},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition},
+}
+
+@article{carreira_human_2016,
+	title = {Human {Pose} {Estimation} with {Iterative} {Error} {Feedback}},
+	url = {http://arxiv.org/abs/1507.06550},
+	abstract = {Hierarchical feature extractors such as Convolutional Networks (ConvNets) have achieved impressive performance on a variety of classification tasks using purely feedforward processing. Feedforward architectures can learn rich representations of the input space but do not explicitly model dependencies in the output spaces, that are quite structured for tasks such as articulated human pose estimation or object segmentation. Here we propose a framework that expands the expressive power of hierarchical feature extractors to encompass both input and output spaces, by introducing top-down feedback. Instead of directly predicting the outputs in one go, we use a self-correcting model that progressively changes an initial solution by feeding back error predictions, in a process we call Iterative Error Feedback (IEF). IEF shows excellent performance on the task of articulated pose estimation in the challenging MPII and LSP benchmarks, matching the state-of-the-art without requiring ground truth scale annotation.},
+	urldate = {2021-05-23},
+	journal = {arXiv:1507.06550 [cs]},
+	author = {Carreira, Joao and Agrawal, Pulkit and Fragkiadaki, Katerina and Malik, Jitendra},
+	month = jun,
+	year = {2016},
+	note = {arXiv: 1507.06550},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition, Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing},
+}
+
+@inproceedings{ho_yub_jung_random_2015,
+	address = {Boston, MA, USA},
+	title = {Random tree walk toward instantaneous {3D} human pose estimation},
+	isbn = {978-1-4673-6964-0},
+	url = {http://ieeexplore.ieee.org/document/7298861/},
+	doi = {10.1109/CVPR.2015.7298861},
+	abstract = {The availability of accurate depth cameras have made real-time human pose estimation possible; however, there are still demands for faster algorithms on low power processors. This paper introduces 1000 frames per second pose estimation method on a single core CPU. A large computation gain is achieved by random walk sub-sampling. Instead of training trees for pixel-wise classiﬁcation, a regression tree is trained to estimate the probability distribution to the direction toward the particular joint, relative to the current position. At test time, the direction for the random walk is randomly chosen from a set of representative directions. The new position is found by a constant step toward the direction, and the distribution for next direction is found at the new position. The continual random walk through 3D space will eventually produce an expectation of step positions, which we estimate as the joint position. A regression tree is built separately for each joint. The number of random walk steps can be assigned for each joint so that the computation time is consistent regardless of the size of body segmentation. The experiments show that even with large computation gain, the accuracy is higher or comparable to the state-of-the-art pose estimation methods.},
+	language = {en},
+	urldate = {2021-05-23},
+	booktitle = {2015 {IEEE} {Conference} on {Computer} {Vision} and {Pattern} {Recognition} ({CVPR})},
+	publisher = {IEEE},
+	author = {{Ho Yub Jung} and {Soochahn Lee} and {Yong Seok Heo} and {Il Dong Yun}},
+	month = jun,
+	year = {2015},
+	pages = {2467--2474},
+}
+
+@article{redmon_you_2016,
+	title = {You {Only} {Look} {Once}: {Unified}, {Real}-{Time} {Object} {Detection}},
+	shorttitle = {You {Only} {Look} {Once}},
+	url = {http://arxiv.org/abs/1506.02640},
+	abstract = {We present YOLO, a new approach to object detection. Prior work on object detection repurposes classifiers to perform detection. Instead, we frame object detection as a regression problem to spatially separated bounding boxes and associated class probabilities. A single neural network predicts bounding boxes and class probabilities directly from full images in one evaluation. Since the whole detection pipeline is a single network, it can be optimized end-to-end directly on detection performance. Our unified architecture is extremely fast. Our base YOLO model processes images in real-time at 45 frames per second. A smaller version of the network, Fast YOLO, processes an astounding 155 frames per second while still achieving double the mAP of other real-time detectors. Compared to state-of-the-art detection systems, YOLO makes more localization errors but is far less likely to predict false detections where nothing exists. Finally, YOLO learns very general representations of objects. It outperforms all other detection methods, including DPM and R-CNN, by a wide margin when generalizing from natural images to artwork on both the Picasso Dataset and the People-Art Dataset.},
+	urldate = {2021-05-21},
+	journal = {arXiv:1506.02640 [cs]},
+	author = {Redmon, Joseph and Divvala, Santosh and Girshick, Ross and Farhadi, Ali},
+	month = may,
+	year = {2016},
+	note = {arXiv: 1506.02640},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition},
+}
+
+@inproceedings{cipolla_multi-task_2018,
+	address = {Salt Lake City, UT, USA},
+	title = {Multi-task {Learning} {Using} {Uncertainty} to {Weigh} {Losses} for {Scene} {Geometry} and {Semantics}},
+	isbn = {978-1-5386-6420-9},
+	url = {https://ieeexplore.ieee.org/document/8578879/},
+	doi = {10.1109/CVPR.2018.00781},
+	abstract = {Numerous deep learning applications beneﬁt from multitask learning with multiple regression and classiﬁcation objectives. In this paper we make the observation that the performance of such systems is strongly dependent on the relative weighting between each task’s loss. Tuning these weights by hand is a difﬁcult and expensive process, making multi-task learning prohibitive in practice. We propose a principled approach to multi-task deep learning which weighs multiple loss functions by considering the homoscedastic uncertainty of each task. This allows us to simultaneously learn various quantities with different units or scales in both classiﬁcation and regression settings. We demonstrate our model learning per-pixel depth regression, semantic and instance segmentation from a monocular input image. Perhaps surprisingly, we show our model can learn multi-task weightings and outperform separate models trained individually on each task.},
+	language = {en},
+	urldate = {2021-05-21},
+	booktitle = {2018 {IEEE}/{CVF} {Conference} on {Computer} {Vision} and {Pattern} {Recognition}},
+	publisher = {IEEE},
+	author = {Cipolla, Roberto and Gal, Yarin and Kendall, Alex},
+	month = jun,
+	year = {2018},
+	pages = {7482--7491},
+}
+
+@article{zhao_loss_2018,
+	title = {Loss {Functions} for {Neural} {Networks} for {Image} {Processing}},
+	url = {http://arxiv.org/abs/1511.08861},
+	abstract = {Neural networks are becoming central in several areas of computer vision and image processing and different architectures have been proposed to solve specific problems. The impact of the loss layer of neural networks, however, has not received much attention in the context of image processing: the default and virtually only choice is L2. In this paper, we bring attention to alternative choices for image restoration. In particular, we show the importance of perceptually-motivated losses when the resulting image is to be evaluated by a human observer. We compare the performance of several losses, and propose a novel, differentiable error function. We show that the quality of the results improves significantly with better loss functions, even when the network architecture is left unchanged.},
+	urldate = {2021-05-21},
+	journal = {arXiv:1511.08861 [cs]},
+	author = {Zhao, Hang and Gallo, Orazio and Frosio, Iuri and Kautz, Jan},
+	month = apr,
+	year = {2018},
+	note = {arXiv: 1511.08861},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition},
+}
+
 @article{liu_point_2020,
 	title = {Point {Cloud} {Quality} {Assessment}: {Large}-scale {Dataset} {Construction} and {Learning}-based {No}-{Reference} {Approach}},
 	shorttitle = {Point {Cloud} {Quality} {Assessment}},
@@ -27,7 +305,7 @@ version: 1},
 	keywords = {Computer Science - Computer Vision and Pattern Recognition},
 }
 
-@article{moon_v2v-posenet_2018,
+@article{moon_v2v-posenet_2018-1,
 	title = {{V2V}-{PoseNet}: {Voxel}-to-{Voxel} {Prediction} {Network} for {Accurate} {3D} {Hand} and {Human} {Pose} {Estimation} from a {Single} {Depth} {Map}},
 	shorttitle = {{V2V}-{PoseNet}},
 	url = {http://arxiv.org/abs/1711.07399},
@@ -63,7 +341,7 @@ Most commonly M is a  metric space and dissimilarity is expressed as a distance 
 	note = {Page Version ID: 1020801927},
 }
 
-@article{haque_towards_2016,
+@article{haque_towards_2016-1,
 	title = {Towards {Viewpoint} {Invariant} {3D} {Human} {Pose} {Estimation}},
 	url = {http://arxiv.org/abs/1603.07076},
 	abstract = {We propose a viewpoint invariant model for 3D human pose estimation from a single depth image. To achieve this, our discriminative model embeds local regions into a learned viewpoint invariant feature space. Formulated as a multi-task learning problem, our model is able to selectively predict partial poses in the presence of noise and occlusion. Our approach leverages a convolutional and recurrent network architecture with a top-down error feedback mechanism to self-correct previous pose estimates in an end-to-end manner. We evaluate our model on a previously published depth dataset and a newly collected human pose dataset containing 100K annotated depth images from extreme viewpoints. Experiments show that our model achieves competitive performance on frontal views while achieving state-of-the-art performance on alternate viewpoints.},
