--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,7 @@
     english,
     singlespacing,
     headsepline,
+    openany,
 ]{MastersThesis}
 
 \usepackage[utf8]{inputenc} % Required for inputting international characters
@@ -15,6 +16,8 @@
 
 \usepackage[autostyle=true]{csquotes} % Required to generate language-dependent quotes in the bibliography
 
+\usepackage{amsmath}
+\usepackage[linesnumbered,ruled,vlined]{algorithm2e}
 %----------------------------------------------------------------------------------------
 %	MARGIN SETTINGS
 %----------------------------------------------------------------------------------------
@@ -39,21 +42,16 @@
 \author{Oleksandr \textsc{Onbysh}}
 
 \subject{Data Science}
-\university{\href{https://ucu.edu.ua/en/}{Ukrainian Catholic University}} 
-\department{\href{https://apps.ucu.edu.ua/en/}{Department of Computer Sciences}}
-\faculty{\href{https://apps.ucu.edu.ua/en/}{Faculty of Applied Sciences}} 
-
-% \AtBeginDocument{
-% \hypersetup{pdftitle=\ttitle} % Set the PDF's title to your title
-% \hypersetup{pdfauthor=\authorname} % Set the PDF's author to your name
-% \hypersetup{pdfkeywords=\keywordnames} % Set the PDF's keywords to your keywords
-% }
+\keywords{}
+\university{\href{http://www.ucu.edu.ua}{Ukrainian Catholic University}}
+\department{\href{http://department.university.com}{Faculty of Applied Sciences}}
+\group{\href{http://researchgroup.university.com}{Department of Computer Sciences}}
+\faculty{\href{http://faculty.university.com}{}}
 
 \begin{document}
 
-\frontmatter % Use roman page numbering style (i, ii, iii, iv...) for the pre-content pages
-
-\pagestyle{plain} % Default to the plain heading style until the thesis style is called for the body content
+\frontmatter 
+\pagestyle{plain} 
 
 %----------------------------------------------------------------------------------------
 %	TITLE PAGE
@@ -73,13 +71,13 @@
 \begin{minipage}[t]{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Author:}\\
-\href{https://www.linkedin.com/in/alexanderonbysh/}{\authorname} % Author name - remove the \href bracket to remove the link
+\href{https://www.linkedin.com/in/alexanderonbysh/}{\authorname}
 \end{flushleft}
 \end{minipage}
 \begin{minipage}[t]{0.4\textwidth}
 \begin{flushright} \large
 \emph{Supervisor:} \\
-\href{https://nure.ua/en/staff/andrii-babii}{\supname} % Supervisor name - remove the \href bracket to remove the link  
+\href{https://nure.ua/en/staff/andrii-babii}{\supname}
 \end{flushright}
 \end{minipage}\\[3cm]
  
@@ -87,7 +85,7 @@
 
 \large \textit{A thesis submitted in fulfillment of the requirements\\ for the degree of \degreename}\\[0.3cm] % University requirement text
 \textit{in the}\\[0.4cm]
-\deptname\\[2cm] % department name
+\groupname\\\deptname\\[2cm]
  
 \vfill
 \includegraphics[scale=0.15]{logo.png} % University/department logo - uncomment to place it
@@ -97,6 +95,42 @@
 
 \end{center}
 \end{titlepage}
+
+%----------------------------------------------------------------------------------------
+%	DECLARATION PAGE
+%----------------------------------------------------------------------------------------
+
+\begin{declaration}
+\addchaptertocentry{\authorshipname} % Add the declaration to the table of contents
+\noindent I, \authorname, declare that this thesis titled, \enquote{\ttitle} and the work presented in it are my own. I confirm that:
+
+\begin{itemize} 
+\item This work was done wholly or mainly while in candidature for a research degree at this University.
+\item Where any part of this thesis has previously been submitted for a degree or any other qualification at this University or any other institution, this has been clearly stated.
+\item Where I have consulted the published work of others, this is always clearly attributed.
+\item Where I have quoted from the work of others, the source is always given. With the exception of such quotations, this thesis is entirely my own work.
+\item I have acknowledged all main sources of help.
+\item Where the thesis is based on work done by myself jointly with others, I have made clear exactly what was done by others and what I have contributed myself.\\
+\end{itemize}
+ 
+\noindent Signed:\\
+\rule[0.5em]{25em}{0.5pt} % This prints a line for the signature
+ 
+\noindent Date:\\
+\rule[0.5em]{25em}{0.5pt} % This prints a line to write the date
+\end{declaration}
+
+\cleardoublepage
+
+%----------------------------------------------------------------------------------------
+%	QUOTATION PAGE
+%----------------------------------------------------------------------------------------
+
+\vspace*{0.2\textheight}
+
+\noindent\enquote{\itshape Thanks to my solid academic training, today I can write hundreds of words on virtually any topic without possessing a shred of information, which is how I got a good job in journalism.}\bigbreak
+
+\hfill Dave Barry
 
 %----------------------------------------------------------------------------------------
 %	ABSTRACT PAGE
@@ -110,13 +144,20 @@ The project's objective is to experimentally assess the applicability of capsule
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
+%	ACKNOWLEDGEMENTS
+%----------------------------------------------------------------------------------------
+
+\begin{acknowledgements}
+\addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
+The acknowledgments and the people to thank go here, don't forget to include your project advisor\ldots
+\end{acknowledgements}
+
+%----------------------------------------------------------------------------------------
 %	LIST OF CONTENTS/FIGURES/TABLES PAGES
 %----------------------------------------------------------------------------------------
 
 \tableofcontents % Prints the main table of contents
-
 \listoffigures % Prints the list of figures
-
 \listoftables % Prints the list of tables
 
 %----------------------------------------------------------------------------------------
@@ -125,8 +166,8 @@ The project's objective is to experimentally assess the applicability of capsule
 
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 
-\textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere\\
-\textbf{WSF} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or\\
+\textbf{CapsNet} & Capsule network \\
+
 
 \end{abbreviations}
 
@@ -136,14 +177,13 @@ The project's objective is to experimentally assess the applicability of capsule
 
 \begin{symbols}{lll} % Include a list of Symbols (a three column table)
 
-$a$ & distance & \si{\meter} \\
-$P$ & power & \si{\watt} (\si{\joule\per\second}) \\
-%Symbol & Name & Unit \\
 
-\addlinespace % Gap to separate the Roman symbols from the Greek
+$P$ & set of points in $D$ space (point cloud) \\
+$J$ & set of key joints positions \\
+$N$ & resolution of point cloud (number of points in one cloud) \\
 
-$\omega$ & angular frequency & \si{\radian} \\
 
+% \addlinespace % Gap to separate the Roman symbols from the Greek
 \end{symbols}
 
 %----------------------------------------------------------------------------------------
@@ -160,8 +200,10 @@ $\omega$ & angular frequency & \si{\radian} \\
 \include{Chapters/01-Introduction}
 \include{Chapters/02-Related-work} 
 \include{Chapters/03-research-hypothesis-and-problem}
-%\include{Chapters/Chapter4} 
-%\include{Chapters/Chapter5} 
+\include{Chapters/04-Methodology} 
+\include{Chapters/05-Dataset and evaluation} 
+\include{Chapters/06-Experiments} 
+\include{Chapters/07-Conclusions} 
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - APPENDICES
@@ -172,7 +214,7 @@ $\omega$ & angular frequency & \si{\radian} \\
 % Include the appendices of the thesis as separate files from the Appendices folder
 % Uncomment the lines as you write the Appendices
 
-\include{Appendices/AppendixA}
+% \include{Appendices/AppendixA}
 %\include{Appendices/AppendixB}
 %\include{Appendices/AppendixC}
 
